# ossprey-python-client

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json  startup.sh
.githooks/: pre-push  prepush
.github/: copilot-instructions.md
.github/actions/python-release/: action.yml
.github/workflows/: release.yml  tag.yml  test.yml
ossprey/: __main__.py  args.py  exceptions.py  github_actions_reporter.py  main.py  models.py  modes.py  ossprey.py  sbom_docker.py  sbom_filesystem.py  sbom_javascript.py  sbom_python.py  scan.py  test_args.py  test_entrypoint.py  test_environment.py  test_github_actions_reporter.py  test_log.py  test_main.py  test_mode_fs.py  test_ossprey.py  test_sbom_docker.py  test_sbom_filesystem.py  test_sbom_javascript.py  test_sbom_python.py  test_scan.py  test_virtualenv.py  utils.py  virtualenv.py
scan/: __main__.py  args.py  github_actions_reporter.py  ossprey.py  sbom.py  sbom_javascript.py  sbom_python.py  scan.py  test_args.py  test_github_actions_reporter.py  test_sbom.py  test_sbom_javascript.py  test_sbom_python.py  test_scan.py  test_virtualenv.py  virtualenv.py
test/docker_js_simple_math/: Dockerfile
test/docker_js_simple_math/javascript/: package-lock.json  package.json
test/docker_py_simple_math/: Dockerfile  build.sh
test/docker_py_simple_math/python/: requirements.txt
test/docker_simple_math/: Dockerfile
test/npm_simple_math/: package-lock.json  package.json
test/poetry_simple_math/poetry_simple_math/: operations.py
test/smoke/: conftest.py  test_smoke.py
test/test_packages/docker_py_simple_math/: Dockerfile
test/test_packages/hatch_simple_math/: pyproject.toml
test/test_packages/poetry_simple_math/: pyproject.toml
test/test_packages/uv_simple_math/: pyproject.toml
test/yarn_massive_math/: package.json
test/yarn_simple_math/: package.json
(+21 files in other folders)
