[project]
name = "hatch-simple-math"
version = "0.1.0"
description = "Hatch-managed test package"
requires-python = ">=3.12"
dependencies = [
    "rich>=13.0,<14",
    "typer==0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hatch_simple_math"]
