[project]
name = "poetry-simple-math"
version = "0.1.0"
description = "test package"
authors = [
    {name = "David Read"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.26.0,<3.0.0)",
    "numpy (>=2.0.0,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
