[project]
name = "uv-simple-math"
version = "0.1.0"
description = "uv-managed test package (PEP 621, no lock)"
requires-python = ">=3.12"
dependencies = [
    "requests==2.31.0",
    "click==8.1.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["uv_simple_math"]
